# bench

./: .env.example  .gitignore  README.md  SLIDES.md  buckets.txt  docker-compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
src/: dotenv.pyi  msgspec.pyi  orjson.pyi  prometheus_client.pyi  uvicorn.pyi
src/aiomcache/: __init__.pyi  exceptions.pyi
src/asyncpg/: __init__.pyi  connection.pyi  exceptions.pyi
src/asyncpg/protocol/: __init__.pyi  protocol.pyi
src/bench/: __init__.py
src/bench/fastapi/: cache.py  configs.py  core.py  database.py  metrics.py  schema.sql
src/bench/fastify/: app.js  cache.js  database.js  devices.js  metrics.js
src/bench/litestr/: __init__.py  cache.py  configs.py  core.py  database.py  metrics.py  routes.py
src/bench/spartan/: __init__.py  cache.py  configs.py  core.py  database.py  metrics.py  routes.py  schema.sql
src/bench/starlet/: __init__.py  cache.py  configs.py  core.py  database.py  metrics.py  routes.py
src/bench/vanilla/: app.js  cache.js  database.js  devices.js  metrics.js
src/bench_fastapi/: cache.py  configs.py  core.py  database.py  metrics.py
src/bench_fastify/: app.js  cache.js  database.js  devices.js  metrics.js
src/bench_litestar/: __init__.py  cache.py  configs.py  core.py  database.py  metrics.py  routes.py  schema.py  schema.sql
src/bench_starlette/: cache.py  configs.py  core.py  database.py  routes.py
src/bench_uvicorn/: __init__.py  cache.py  configs.py  core.py  database.py  metrics.py  routes.py
src/bench_vanilla/: app.js  cache.js  database.js  devices.js  metrics.js
src/litestar/: __init__.pyi  di.pyi  exceptions.pyi  response.pyi  status_codes.pyi
src/litestar/handlers/: __init__.pyi  http_handlers.pyi
src/litestr/: __init__.pyi  di.pyi  exceptions.pyi  response.pyi
src/msgspec/: __init__.pyi  json.pyi
src/press/: migrate.py
src/pylibmc/: __init__.pyi  client.pyi  pools.pyi
src/pymemcache/: __init__.pyi  exceptions.pyi
src/pymemcache/client/: __init__.pyi  base.pyi
src/starlet/: applications.pyi  routing.pyi
src/starlette/: __init__.pyi  applications.pyi  exceptions.pyi  requests.pyi  responses.pyi  routing.pyi  status.pyi
src/uvicorn/: __init__.pyi  _types.pyi
