[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[project]
dependencies = [
  'aiomcache >=0.8.2',
  'asyncpg >=0.30.0',
  'fastapi >=0.115.6',
  'litestar >=2.0.0',
  'msgspec >=0.19.0',
  'orjson >=3.10.14',
  'prometheus-client >=0.21.1',
  'uvicorn >=0.34.0',
]
description = 'Performance is a feature'
name = 'bench-fastapi'
readme = 'README.md'
requires-python = '>=3.13'
version = '0.1.0'


[project.scripts]
bench-fastapi = 'bench_fastapi.core:main'
bench-litestar = 'bench_litestar.core:main'


[tool.hatch.build.targets.wheel]
packages = [ 'src/bench_fastapi', 'src/bench_litestar' ]


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py313'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # Ignore unused imports


[tool.uv]
dev-dependencies = [
  'python-dotenv >=1.0.1',
  'ruff >=0.9.2',
]
