[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[project]
dependencies = [
  'asyncpg >=0.30.0',
  'fastapi >=0.115.6',
  'litestar >=2.16.0',
  'msgspec >=0.19.0',
  'prometheus-client >=0.21.1',
  'psutil >=7.0.0',
  'pylibmc >=1.6.3',
  'starlette >=0.37.0',
  'uvicorn >=0.34.0',
]
description = 'Performance is a feature'
name = 'bench'
readme = 'README.md'
requires-python = '>=3.12.9'
version = '0.1.0'


[project.scripts]
bench-fastapi = 'bench_fastapi.core:main'
bench-litestar = 'bench_litestar.core:main'
bench-starlette = 'bench_starlette.core:main'
bench-uvicorn = 'bench_uvicorn.core:main'
press-migrate = 'press.migrate:main'


[tool.hatch.build.targets.wheel]
packages = [
  'src/bench_fastapi',
  'src/bench_litestar',
  'src/bench_starlette',
  'src/bench_uvicorn',
  'src/press',
]


[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = [
  'hatch-mypyc >=0.16.0',
  'mypy >=1.15.0',
]
enable-by-default = true
exclude = [
  '/src/bench_fastapi',
  '/src/bench_fastify',
  '/src/bench_litestar',
  '/src/press',
  '/src/bench_starlette',
  '/src/bench_vanilla',
  '/src/bench_uvicorn/core.py',
]
mypy-args = [
  '--disallow-untyped-calls',
  '--disallow-untyped-defs',
  '--disallow-incomplete-defs',
  '--strict',
]
packages = [ 'src/bench_starlette' ]
only-include = [
  '/src/bench_uvicorn/cache.py',
  '/src/bench_uvicorn/configs.py',
  '/src/bench_uvicorn/routes.py',
  '/src/bench_uvicorn/database.py',
  '/src/bench_uvicorn/metrics.py',
]


[tool.hatch.build.targets.wheel.hooks.mypyc.options]
debug_level = '0'
opt_level = '3'


[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [
  'src/bench_fastapi',
  'src/bench_fastify',
  'src/bench_litestar',
  'src/bench_starlette',
  'src/bench_vanilla',
]
strict = true


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py312'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # Ignore unused imports


[tool.uv]
dev-dependencies = [
  'mypy >=1.15.0',
  'python-dotenv >=1.0.1',
  'ruff >=0.9.2',
]
